--- a/production_scheduling_app/templates/production_scheduling_app/flow_shop_introduction.html
+++ b/production_scheduling_app/templates/production_scheduling_app/flow_shop_introduction.html
@@ -36,7 +36,7 @@
     <h3>1. 문제 설명</h3>
     <p>
         <strong>흐름 공정 스케줄링 문제</strong>는 여러 개의 작업(Job)이 모두 동일한 순서로 여러 대의 기계(Machine)를 거쳐
-        가공되는 생산 환경에서의 순서 최적화 문제입니다.
+        가공되는 생산 환경에서의 순서 최적화 문제입니다.<br>
         예를 들어, 모든 제품이 <strong>1번 기계(절단) &rarr; 2번 기계(용접) &rarr; 3번 기계(도색)</strong> 순서로 처리되는 경우를 말합니다.
     </p>
     <p>
@@ -102,11 +102,17 @@
         <h4 class="model-definition-content"><strong> 목표 함수:</strong></h4>
         <p>전체 작업 완료 시간(Makespan) 최소화. 이는 마지막 순서의 작업이 마지막 기계에서 완료되는 시간과 같습니다. </p>
         <div class="math-block">
-            $$ \min C_{max} = \min (\max_{i=1, \dots, n} C_{im}) $$
+            $$ \min C_{max} $$
         </div>
 
         <h4 class="model-definition-content"><strong>제약 조건</strong></h4>
         <ul>
+            <li><strong>Makespan \( C_{max} \)의 정의:</strong>
+                <p>Makespan은 마지막 기계 \( m \) 에서 완료되는 모든 작업들의 완료 시간 중 가장 큰 값</p>
+                <div class="math-block">
+                    $$ C_{max} \ge C_{im} \quad (\forall i=1,\dots,n)$$
+                </div>
+            </li>
             <li><strong>기계 순서 제약 (작업 흐름)</strong>
                 <p>한 작업은 이전 단계의 기계에서 처리가 완료되어야만 다음 단계의 기계를 사용할 수 있습니다.
                     예를 들어, 작업 \( i \)는 기계 \( j \)−1에서 완료된 후에야 기계 \( j \)에서 가공을 시작할 수 있습니다.</p>
@@ -141,8 +147,8 @@
     <h3>4. Flow Shop Demo</h3>
     <p>
         <strong>Flow Shop Demo</strong>에서는
-        사용자가 ???을 입력하여
-        ??? 최소화하는 생산 계획을 수립하는 과정을 체험할 수 있습니다.
+        사용자가 <strong>작업 정보</strong>와 <strong>기계별 처리 시간</strong>을 입력하여
+        전체 작업 완료 시간(Makespan)을 최소화하는 생산 계획을 수립하는 과정을 체험할 수 있습니다.
     </p>
 
     <div class="highlight-box">
