--- a/production_scheduling_app/templates/production_scheduling_app/job_shop_introduction.html
+++ b/production_scheduling_app/templates/production_scheduling_app/job_shop_introduction.html
@@ -27,6 +27,20 @@
         <figcaption class="image-caption">그림 1: 각 작업(Job A, Job B)이 서로 다른 기계 순서(Routing)를 가집니다. 이로 인해 기계 점유를 위한 경쟁이 발생하며, 복잡한 스케줄링 문제가 됩니다.</figcaption>
     </figure>
 
+    <p>Job Shop Scheduling는 Flow Shop Scheduling 마찬가지로 수리적 모델을 이용하여 문제를 해결할 수 있으나
+    작업마다 기계 순서가 다르기 때문에 제약 조건이 훨씬 복잡해지므로 매우 복잡하여 최적해를 찾기 어려울 수도 있습니다. <BR>
+    상황과 문제의 크기에 따라 아래 소개하는 간단한 우선 순위나 휴리스틱 접근법을 이용하기도 합니다.
+    </p>
+    <h4>해결 방법(Solution Methods) </h4>
+    <ul>
+        <li><strong>SPT(Shortest Processing Time):</strong> 처리 시간이 가장 짧은 작업을 먼저 처리</li>
+        <li><strong>FCFS(First Come, First Served):</strong> 기계에 먼저 도착한 작업을 먼저 처리</li>
+        <li><strong>EDD (Earliest Due Date):</strong> 납기일이 가장 빠른 작업을 우선 처리</li>
+        <li><strong>MWKR (Most Work Remaining):</strong> 앞으로 남은 공정의 총 처리 시간이 가장 긴 작업을 우선 처리, 중요한 작업을 먼저 끝내려는 시도</li>
+        <li><strong>CR (Critical Ratio): </strong> (납기까지 남은 시간) / (남은 총 작업 시간)의 비율을 계산하여, 가장 작은 값(가장 급한 작업)을 먼저 처리</li>
+        <li><strong>Shifting Bottleneck Heuristic:</strong> 부하가 많이 걸리는 Bottleneck 기계의 작업 순서부터 결정하여 순차적으로 처리</li>
+    </ul>
+
     <h3>2. 산업 응용 분야</h3>
     <p>주문 사양에 따라 생산 공정이 달라지는 다품종 소량생산 환경에서 널리 적용됩니다.</p>
     <ul>
@@ -38,50 +52,73 @@
 
     <h3>3. 수학적 모델</h3>
     <div class="col-md-8 model-definition-content">
-        <strong>주요 파라미터:</strong>
-        <div class="math-block">
-            <p>$$ O_{ij} = \text{The } j^{th} \text{ operation of job } i $$</p>
-            <p>$$ M_{ij} = \text{The machine required for operation } O_{ij} $$</p>
-            <p>$$ p_{ij} = \text{The processing time for operation } O_{ij} $$</p>
-        </div>
-        <h4 class="model-definition-content"><strong>결정 변수:</strong></h4>
-         <div class="math-block">
-            <p>$$ S_{ij} = \text{The start time of operation } O_{ij} $$</p>
-        </div>
-        <strong>목표 함수:</strong>
-         <div class="math-block">
-            <p>$$ \min C_{max} = \min (\max_{i,j} (S_{ij} + p_{ij})) $$</p>
-            <p>$$ \text{(Minimize the makespan)} $$</p>
-        </div>
-
+        <h4 class="model-definition-content"><strong>입력 데이터:</strong></h4>
+        <ul>
+            <li><strong>\( i, k \in \{1, 2, \dots, n\} \)</strong> : 작업(Job)의 인덱스. n은 총 작업의 수</li>
+            <li><strong>\( j \in \{1, 2, \dots, m\} \)</strong> : 기계(Machine)의 인덱스. m은 총 기계의 수</li>
+            <li><strong>\( O \)</strong> : 작업 내 공정(Operation)의 순서 번호</li>
+            <li><strong>\( O_{ij} \)</strong> : 작업 \( i \) 의 공정 중 기계 \( j \)를 사용하는 공정 번호.(\( O_{1,3} = 2\): 작업 1의 2번째 공정이 기계 3을 사용)</li>
+            <li><strong>\( M_{io} \)</strong> : 작업 \( i \) 의 \( o \) 번째 공정에서 사용되는 기계의 번호</li>
+            <li><strong>\( p_{io} \)</strong> : 작업 \( i \) 의 \( o \) 번째 공정에 걸리는 시간(Processing time)</li>
+            <li><strong>\( BigM \)</strong> : 매우 큰 양의 상수</li>
+        </ul>
         <hr>
 
-        <strong>주요 제약 조건:</strong>
+        <h4 class="model-definition-content"><strong>결정 변수:</strong></h4>
         <ul>
-            <li>
-                <strong>선행 공정 제약 (Precedence Constraint):</strong> 한 작업 내에서, 이전 공정이 완료되어야만 다음 공정을 시작할 수 있습니다.
+            <li><strong>\( S_{io} \)</strong>: 작업 \( i \) 의 \( o \) 번째 공정의 시작 시간</li>
+            <li><strong>\( C_{max} \)</strong>: 모든 작업이 완료되는 시간 (Makespan)</li>
+            <li><strong>\( y_{ikj} \)</strong>: 기계 \( j \) 에서 작업 \( i \), 작업 \( k \) 의 순서를 결정하는 이진변수,
+                작업 \( i \) 가 작업 \( k \) 이전에 진행되면 1, 아니면 0</li>
+        </ul>
+
+        <h4 class="model-definition-content"><strong> 목표 함수:</strong></h4>
+        <p>전체 작업 완료 시간(Makespan) 최소화. 이는 마지막 순서의 작업이 마지막 기계에서 완료되는 시간과 같습니다. </p>
+        <div class="math-block">
+            $$ \min C_{max} $$
+        </div>
+
+        <h4 class="model-definition-content"><strong>제약 조건</strong></h4>
+        <ul>
+            <li><strong>Makespan \( C_{max} \)의 정의:</strong>
+                <p>Makespan은 모든 작업의 <strong>마지막 공정이 완료되는 시간</strong>들 중 가장 큰 값보다 크거나 같다.</p>
                 <div class="math-block">
-                    <p>$$ S_{i,j+1} \ge S_{ij} + p_{ij} $$</p>
+                    $$ C_{max} \ge  S_{io} + p_{io} \quad (\forall i, o \text{ where } o \text{ is the last operation of job } i)$$
                 </div>
             </li>
-            <li>
-                <strong>자원 제약 (Disjunctive Constraint):</strong> 각 기계는 한 번에 하나의 작업(공정)만 처리할 수 있습니다. 동일한 기계를 사용해야 하는 두 개의 다른 공정($O_{ij}$와 $O_{kl}$)이 있다면, 둘 중 하나는 반드시 다른 하나가 끝난 후에 시작해야 합니다.
+            <li><strong>작업 내 공정 순서 제약 (Precedence Constraint)</strong>
+                <p>각 작업은 자신에게 주어진 고유한 공정 순서를 반드시 따라야 합니다.
+                    즉, \( o + i \) 번째 공정은 \( o \) 번째 공정이 완료된 후에만 시작할 수 있습니다.</p>
                 <div class="math-block">
-                     <p>$$ (S_{ij} + p_{ij} \le S_{kl}) \lor (S_{kl} + p_{kl} \le S_{ij}) \quad \text{if } M_{ij} = M_{kl} $$</p>
+                    <p>$$ S_{i, o+1} \ge S_{i, o} + p_{io} \quad (\forall i, o \text{ where } o \text{ is not the last operation of job } i)$$</p>
+                    <p>이 제약식이 각 작업의 고유한 라우팅(Unique Routing)을 강제</p>
+                </div>
+            </li>
+            <li><strong>기계 독점 제약 (Capacity Constraint)</strong>
+                <p>각 기계는 한 번에 하나의 작업만 처리할 수 있습니다.
+                    만약 두 작업 \( i \) 와 \( k \) 가 모두 기계 \( j \)를 사용해야 한다면,
+                    둘 중 하나의 작업이 완전히 끝난 후에야 다른 작업이 시작될 수 있습니다. </p>
+                <div class="math-block">
+                    $$ S_{ko'} \ge S_{io} + p_{io} - BigM (1 - y_{ikj}) \quad (\forall i, o \text{ where } M_{io} = M_{ko'} = j)$$
+                    $$ S_{ko'} \ge S_{io} + p_{io} - BigM y_{ikj} \quad (\forall i, o \text{ where } M_{io} = M_{ko'} = j)$$
+                    <p>만약 \( y_{ikj} = 1 \) 이면 첫 번째 식에 의해서 기계 \( j \) 에서 작업 \( i \) 가 작업 \( k \) 보다 먼저 작업 합니다.<br>
+                    반대로 \( y_{ikj} = 0 \) 이면 두 번째 식에 의해서 기계 \( j \) 에서 작업 \( i \) 가 작업 \( k \) 보다 나중에 작업 합니다.<br>
+                    즉 y_{ikj} 값에 따라 두 제약식 중 하나만 작용하여 두 작업이 기계 \( j \)에서 겹치지 않도록 보장합니다.  </p>
+                </div>
+            </li>
+            <li><strong>변수 타입 및 범위:</strong> 모든 완료 시간은 0 이상
+                <p>모든 시작 시간은 0보다 커야 합니다.</p>
+                <div class="math-block">
+                    $$ S_{ij} \ge 0, C_{max} \ge 0$$
                 </div>
             </li>
         </ul>
-
-        <strong>해법 (Solution Methods):</strong>
-        <p>
-            Job Shop 스케줄링은 대표적인 NP-hard 문제입니다. 작은 규모의 문제에 대해서는 정수 계획법(MIP)이나 제약 프로그래밍(CP)으로 최적해를 구할 수 있지만, 규모가 커지면 매우 오랜 시간이 걸립니다. 따라서 실제 산업 현장에서는 시뮬레이티드 어닐링(Simulated Annealing), 타부 탐색(Tabu Search) 등 다양한 메타휴리스틱(Metaheuristic) 기법들이 널리 사용됩니다. OR-Tools의 CP-SAT 솔버는 이러한 종류의 문제를 푸는 데 매우 강력한 성능을 보입니다.
-        </p>
     </div>
     <h3>4. Job Shop Demo</h3>
     <p>
         <strong>Job Shop Demo</strong>에서는
-        사용자가 ???을 입력하여
-        ??? 최소화하는 생산 계획을 수립하는 과정을 체험할 수 있습니다.
+        사용자가 <strong>작업 정보</strong>와 <strong>기계별 처리 시간</strong>을 입력하여
+        전체 작업 완료 시간(Makespan)을 최소화하는 생산 계획을 수립하는 과정을 체험할 수 있습니다.
     </p>
 </div>
 {% endblock %}
